<resources>
    <string name="app_name">introduce</string>

    <!--介绍页面开始-->
    <string name="introduce1_description">Thank you for installing Paperboy.What makes Paperboy different form other news reader apps is its simplicity and elegant design.</string>
    <string name="introduce1_title">Welcome</string>
    <string name="introduce2_title">Customizations</string>
    <string name="introduce2_description">We believe tha each user is unique and hence several customization options are provided to suit different reading styles.To customize please visit the settings page.</string>
    <string name="introduce3_title">Reading pattern learner</string>
    <string name="introduce3_description">The home screen tiles will automatically reaarrange based on reading patterns for better user experence.All data is stored locally kepping in mind user privacy.</string>
    <!--介绍页面结束-->

    <!--该资源在login组件中存在同名的资源，可能存在资源冲突，可以使用资源前缀来避免-->
    <string name="login_try">TRY THINGS OUT_INTRODUCE</string>
</resources>
